<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitMotivator</string>
    <string name="title">FitMotivator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnWeather">Add</string>
    <string name="display">Remaining goal:</string>
    <string name="enterGoal">Enter goal</string>
    <string name="motMsg"></string>
    <string name="txtGoal"></string>
    <string name="title_activity_day__picker_">Day_Picker_Activity</string>

    <!-- Day_Picker_Activity Strings -->
    <string name="txtPickDate">Choose days</string>
    <string name="chk_sunday">Sunday</string>
    <string name="chk_monday">Monday</string>
    <string name="chk_tuesday">Tuesday</string>
    <string name="chk_wednesday">Wednesday</string>
    <string name="chk_thursday">Thursday</string>
    <string name="chk_friday">Friday</string>
    <string name="chk_saturday">Saturday</string>
    <string name="btnSave">Save</string>
    <string name="title_activity_calories">Calories</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Close</string>
    <string name="title_activity_splashscreen">splashscreen</string>
    <string name="addCalories">Add calories</string>
    <string name="title_activity_show_weather">ShowWeather</string>
    <string name="title_activity_sport">Sport</string>

</resources>
