<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="false"
        android:background="@color/appBackground">


        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />


        <!--For relative layout use " layout_below = "@+id/app_bar"-->

        <TextView

            android:id="@+id/txtTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/accent_material_dark"
            android:textSize="40dp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/addCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/addCalories"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/divider" />

        <Button
            android:id="@+id/btnWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:background="@color/highlighted_text_material_dark"
            android:text="@string/btnWeather"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/txtGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/txtGoal"
            android:textColor="@color/accent_material_dark"
            android:textSize="20dp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/calDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/display"
            android:textColor="@color/accent_material_dark"
            android:textSize="20dp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/motMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motMsg"
            android:textColor="@color/primary_text"
            android:textSize="15dp"
            android:typeface="monospace"
            />

        <Button
            android:id="@+id/btnDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schedule"
            android:layout_margin="10dp"
            android:background="@color/highlighted_text_material_dark"
            android:textColor="@color/primary_text"/>

    </LinearLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        app:layout="@layout/fragment_navigation_drawer"
        android:layout_gravity="start"
        android:name="com.fitmotivator.eagleeye.fitmotivator.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>






